Comment out ember-cli-bootstrap-datetimepicker tags

--- a/travelsFront/app/templates/petition-form.hbs
+++ b/travelsFront/app/templates/petition-form.hbs
@@ -38,11 +38,17 @@
 			<div class="col-sm-4">	
 				{{input value=model.taskStartDate type="datetime-local" class="form-control" }}
 			</div>
+			<!-- <div class="col-sm-4">	
+				{{bs-datetimepicker date='model.taskStartDate' format="DD/MM/YYYY-hh:mm a"}}
+			</div> --> 
 
 			<label for="taskEndDate" class="col-sm-2 control-label">Λήξη Εργασιών</label>
 			<div class="col-sm-4">	
 				{{input value=model.taskEndDate type="datetime-local" class="form-control" }}
 			</div>
+			<!-- <div class="col-sm-4">	
+				{{bs-datetimepicker date='model.taskEndDate' format="DD/MM/YYYY-hh:mm a"}}
+			</div> -->
 		</div>
 
 		<div class="profileForm form-group">
