--- a/travelsFront/app/templates/secretary-form.hbs
+++ b/travelsFront/app/templates/secretary-form.hbs
@@ -21,6 +21,9 @@
 			<div class="col-sm-4">
 				{{input value=model.advanced_info.expenditure_date_protocol type="date" class="form-control"}}
 			</div>
+			<!-- <div class="col-sm-4">
+				{{bs-datetimepicker date="" format="DD/MM/YYYY"}}
+			</div> -->
 
 			<label for="expenditure_protocol" class="col-sm-2 control-label">Αρ. Πρ.Αίτησης Δαπάνης</label>
 			<div class="col-sm-4">	
@@ -33,6 +36,9 @@
 			<div class="col-sm-4">
 				{{input value=model.advanced_info.movement_date_protocol type="date" class="form-control"}}
 			</div>
+			<!-- <div class="col-sm-4">
+				{{bs-datetimepicker date="" format="DD/MM/YYYY"}}
+			</div> -->
 
 			<label for="movement_protocol" class="col-sm-2 control-label">Αρ. Πρ.Απόφασης Μετακίνησης</label>
 			<div class="col-sm-4">	
@@ -45,11 +51,17 @@
 			<div class="col-sm-4">	
 				{{input value=model.depart_date type="datetime-local" class="form-control"  }}
 			</div>
+			<!-- <div class="col-sm-4">
+				{{bs-datetimepicker date="" format="DD/MM/YYYY-hh:mm a" }}
+			</div> -->
 
 			<label for="return_date" class="col-sm-2 control-label">Επιστροφή</label>
 			<div class="col-sm-4">	
 				{{input value=model.return_date type="datetime-local" class="form-control" }}
 			</div>
+			<!-- <div class="col-sm-4">
+				{{bs-datetimepicker date="" format="DD/MM/YYYY-hh:mm a" }}
+			</div> -->
 		</div>
 
 		<div class="profileForm form-group">
