--- a/travelsFront/app/templates/advanced-petition.hbs
+++ b/travelsFront/app/templates/advanced-petition.hbs
@@ -36,7 +36,7 @@
 			Υποβολή Αίτησης
 		</button>
 
-		<!-- Modal -->
+		<!-- Modal for submit advanced petition-->
 		<div class="modal fade" id="submissionModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
 			<div class="modal-dialog" role="document">
 				<div class="modal-content">
@@ -56,6 +56,7 @@
 			</div>
 		</div>
 
+		<!-- Message Modal-->
 		<div class="modal fade" id="messageModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
 			<div class="modal-dialog" role="document">
 				<div class="modal-content">
