Remove bold from non- mandatory fields

--- a/travelsFront/app/templates/petition-form.hbs
+++ b/travelsFront/app/templates/petition-form.hbs
@@ -108,7 +108,7 @@
 		</div>
 
 		<div class="profileForm form-group">
-			<label for="recTransport" class="col-sm-2 control-label">Προτεινόμενα Μέσα Μετακίνησης</label>
+			<label for="recTransport" class="col-sm-2 control-label" style="font-weight:normal;">Προτεινόμενα Μέσα Μετακίνησης</label>
 			<div class="col-sm-4">	
 				{{#character-limit max=100}}
 					{{textarea value=model.recTransport type="textarea" cols="75" class="form-control"}}
@@ -117,7 +117,7 @@
 		</div>
 
 		<div class="profileForm form-group">
-			<label for="recAccomondation" class="col-sm-2 control-label">Προτεινόμενο Κατάλυμα</label>
+			<label for="recAccomondation" class="col-sm-2 control-label" style="font-weight:normal;">Προτεινόμενο Κατάλυμα</label>
 			<div class="col-sm-4">	
 				{{#character-limit max=100}}
 					{{textarea value=model.recAccomondation type="textarea" cols="75" class="form-control"}}
@@ -126,7 +126,7 @@
 		</div>
 
 		<div class="profileForm form-group">
-			<label for="recCostParticipation" class="col-sm-2 control-label">Κόστος Συμμετοχής</label>
+			<label for="recCostParticipation" class="col-sm-2 control-label" style="font-weight:normal;">Κόστος Συμμετοχής</label>
 			<div class="col-sm-4">	
 					{{input value=model.recCostParticipation type="number" class="form-control"}}
 			</div>
