--- a/travelsFront/app/templates/secretary-form.hbs
+++ b/travelsFront/app/templates/secretary-form.hbs
@@ -86,7 +86,7 @@
 		</div>
 
 		<div class="profileForm form-group">
-			<label for="flight" class="col-sm-2 control-label">Στοιχεία  Μετακίνησης</label>
+			<label for="flight" class="col-sm-2 control-label" style="font-weight:normal;">Στοιχεία  Μετακίνησης</label>
 			<div class="col-sm-4">
 				{{#character-limit max=100}}
 				{{textarea value=model.advanced_info.flight.flightName type="text" cols="35" class="form-control"}}
@@ -95,7 +95,7 @@
 		</div>	
 
 		<div class="profileForm form-group">	
-			<label for="accomondation" class="col-sm-2 control-label">Στοιχεία  Καταλύματος</label>
+			<label for="accomondation" class="col-sm-2 control-label" style="font-weight:normal;">Στοιχεία  Καταλύματος</label>
 			<div class="col-sm-4">
 				{{#character-limit max=100}}
 				{{textarea value=model.advanced_info.accomondation.hotel type="textarea" cols="75" class="form-control"}}
@@ -117,7 +117,7 @@
 		</div>
 
 		<div class="profileForm form-group">
-			<label for="non_grnet_quota" class="col-sm-2 control-label">Ημ. Αποζημίωση από άλλο Φορέα</label>
+			<label for="non_grnet_quota" class="col-sm-2 control-label" style="font-weight:normal;">Ημ. Αποζημίωση από άλλο Φορέα</label>
 			<div class="col-sm-4">
 				{{input value=model.advanced_info.non_grnet_quota type="text" class="form-control" }}
 			</div>
