--- a/travelsFront/app/templates/advanced-petition.hbs
+++ b/travelsFront/app/templates/advanced-petition.hbs
@@ -1,6 +1,6 @@
 <div class="container">
 	<form class="form-horizontal col-md-12 panel panel-default" {{action "clearMessage" on="click" preventDefault=false}} role="form">
-
+	<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 		<br>
 		{{partial 'profile-form'}}
 
@@ -67,7 +67,7 @@
 				</div>
 			</div>
 		</div>
-
+		</div>
 	</form><br><br>
 
 	<form class="form-horizontal col-md-12 panel panel-default" {{action "clearMessage" on="click" preventDefault=false}} role="form">
