--- a/travelsFront/app/templates/secretary-form.hbs
+++ b/travelsFront/app/templates/secretary-form.hbs
@@ -1,8 +1,12 @@
 <div class="panel panel-default">
-	<div class = "panel-heading">
-		<h4 class = "panel-title">Στοιχεία Aίτησης που Καταχωρεί η Γραμματεία</h4>
+	<div class = "panel-heading" role="tab" id="headingSecretary">
+		<h4 class = "panel-title"><a role="button" data-toggle="collapse"
+                 data-parent="#accordion" href="#secretaryForm"
+                 aria-expanded="false" aria-controls="secretaryForm">Στοιχεία Aίτησης που Καταχωρεί η Γραμματεία</a></h4>
 	</div>
 
+	<div role="tabpanel" class="panel-collapse collapse"
+         id="secretaryForm" aria-labelledby="headingSecretary">
 	<div class = "panel-body">
 		<div class="profileForm form-group">
 			<label for="dse" class="col-sm-2 control-label">ΔΣΕ</label>
@@ -89,7 +93,7 @@
 			<label for="flight" class="col-sm-2 control-label" style="font-weight:normal;">Στοιχεία  Μετακίνησης</label>
 			<div class="col-sm-4">
 				{{#character-limit max=100}}
-				{{textarea value=model.advanced_info.flight.flightName type="text" cols="35" class="form-control"}}
+				{{textarea value=model.advanced_info.flight.flightName type="text" cols="75" class="form-control"}}
 				{{/character-limit}}
 			</div>
 		</div>	
@@ -122,5 +126,6 @@
 				{{input value=model.advanced_info.non_grnet_quota type="text" class="form-control" }}
 			</div>
 		</div>
+	</div>
 	</div>
 </div>
