Fix collapsed default appearance

--- a/travelsFront/app/templates/secretary-form.hbs
+++ b/travelsFront/app/templates/secretary-form.hbs
@@ -80,34 +80,7 @@
 			<div class="col-sm-4">
 				{{input value=model.advanced_info.accomondation.hotelPrice type="number" class="form-control" }}
 			</div>
-		</div>
 
-		<div class="profileForm form-group">
-			<label for="trip_days_before" class="col-sm-2 control-label">Εναπομείνασες Ημέρες Μετακίνησης Εργασιών: Πριν</label>
-			<div class="col-sm-4">
-				{{input value=model.trip_days_before type="text" class="form-control" }}
-			</div>
-		</div>
-
-		<div class="profileForm form-group">
-			<label for="flight" class="col-sm-2 control-label" style="font-weight:normal;">Στοιχεία  Μετακίνησης</label>
-			<div class="col-sm-4">
-				{{#character-limit max=100}}
-				{{textarea value=model.advanced_info.flight.flightName type="text" cols="75" class="form-control"}}
-				{{/character-limit}}
-			</div>
-		</div>	
-
-		<div class="profileForm form-group">	
-			<label for="accomondation" class="col-sm-2 control-label" style="font-weight:normal;">Στοιχεία  Καταλύματος</label>
-			<div class="col-sm-4">
-				{{#character-limit max=100}}
-				{{textarea value=model.advanced_info.accomondation.hotel type="textarea" cols="75" class="form-control"}}
-				{{/character-limit}}
-			</div>
-		</div>
-
-		<div class="profileForm form-group">
 			<label for="feeding" class="col-sm-2 control-label">Κάλυψη Διατροφής</label>
 			<div class="col-sm-4">
 				<select onchange={{action "setFeeding" value="target.value"}} class="form-control"> 
@@ -121,11 +94,63 @@
 		</div>
 
 		<div class="profileForm form-group">
+			<label for="trip_days_before" class="col-sm-2 control-label">Εναπομείνασες Ημέρες Μετακίνησης Εργασιών: Πριν</label>
+			<div class="col-sm-4">
+				{{input value=model.trip_days_before type="text" class="form-control" }}
+			</div>
+
+			<div class="profileForm form-group">
 			<label for="non_grnet_quota" class="col-sm-2 control-label" style="font-weight:normal;">Ημ. Αποζημίωση από άλλο Φορέα</label>
 			<div class="col-sm-4">
 				{{input value=model.advanced_info.non_grnet_quota type="text" class="form-control" }}
 			</div>
 		</div>
+		</div>
+
+		<div class="profileForm form-group">
+			<label for="flight" class="col-sm-2 control-label" style="font-weight:normal;">Στοιχεία  Μετακίνησης</label>
+			<div class="col-sm-4">
+				{{#character-limit max=100}}
+				{{textarea value=model.advanced_info.flight.flightName type="text" cols="75" class="form-control"}}
+				{{/character-limit}}
+			</div>
+
+			<label for="accomondation" class="col-sm-2 control-label" style="font-weight:normal;">Στοιχεία  Καταλύματος</label>
+			<div class="col-sm-4">
+				{{#character-limit max=100}}
+				{{textarea value=model.advanced_info.accomondation.hotel type="textarea" cols="75" class="form-control"}}
+				{{/character-limit}}
+			</div>
+		</div>	
+
+		<div class="profileForm form-group">	
+			<!-- <label for="accomondation" class="col-sm-2 control-label" style="font-weight:normal;">Στοιχεία  Καταλύματος</label>
+			<div class="col-sm-4">
+				{{#character-limit max=100}}
+				{{textarea value=model.advanced_info.accomondation.hotel type="textarea" cols="75" class="form-control"}}
+				{{/character-limit}}
+			</div> -->
+		</div>
+
+		<!-- <div class="profileForm form-group">
+			<label for="feeding" class="col-sm-2 control-label">Κάλυψη Διατροφής</label>
+			<div class="col-sm-4">
+				<select onchange={{action "setFeeding" value="target.value"}} class="form-control"> 
+					<option value=""></option>
+
+					{{#each feedings as |feedingChoice|}}
+					<option value={{feedingChoice.id}} selected={{eq feedingChoice.id model.advanced_info.feeding.id}}>{{feedingChoice.name}}</option>
+					{{/each}}
+				</select> 
+			</div>
+		</div> -->
+
+		<!-- <div class="profileForm form-group">
+			<label for="non_grnet_quota" class="col-sm-2 control-label" style="font-weight:normal;">Ημ. Αποζημίωση από άλλο Φορέα</label>
+			<div class="col-sm-4">
+				{{input value=model.advanced_info.non_grnet_quota type="text" class="form-control" }}
+			</div>
+		</div> -->
 	</div>
 	</div>
 </div>
