--- a/travelsFront/app/templates/profile.hbs
+++ b/travelsFront/app/templates/profile.hbs
@@ -106,21 +106,23 @@
 		</div>
 
 		<div class="col-sm-offset-2">
-			<button type="submit" class="btn btn-primary" {{action "profileUpdate"}} disabled={{v-get model 'isInvalid'}}>Submit</button>
+			<button type="submit" class="btn btn-primary" {{action "profileUpdate"}} disabled={{v-get model 'isInvalid'}}>Αποθήκευση</button>
 		</div>
 
-	
-		<div class="profileForm" id="divMessage">
-			{{#if (v-get model 'isValid') }}
-				<font>{{profileMessage}}</font>	
-			{{/if}}
-		</div>	
+		<!-- Message Modal-->
+		<div class="modal fade" id="messageModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header" id="styleModal">
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+						<h4 class="modal-title" id="myModalLabel"><font>{{profileMessage}}</font></h4>
+					</div>
+				</div>
+			</div>
+		</div>
 	</form>
 
 </div>
-
-
-
 
 {{outlet}}
 
