Make computed-petition more compact

--- a/travelsFront/app/templates/advanced-petition.hbs
+++ b/travelsFront/app/templates/advanced-petition.hbs
@@ -32,6 +32,7 @@
 				</div>
 			</div>
 		</div>
+
 		<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#submissionModal" {{action "checkDates"}} >
 			Υποβολή Αίτησης
 		</button>
@@ -68,7 +69,7 @@
 			</div>
 		</div>
 		</div>
-	</form><br><br>
+	</form>
 
 	<form class="form-horizontal col-md-12 panel panel-default" {{action "clearMessage" on="click" preventDefault=false}} role="form">
 		<br>
@@ -110,7 +111,7 @@
 				</div>
 			</div>
 		</div>
-	</form><br>
+	</form>
 </div>
 
 {{outlet}}
