--- a/travelsFront/app/templates/petition.hbs
+++ b/travelsFront/app/templates/petition.hbs
@@ -1,6 +1,6 @@
 <div class="container">
 	<form class="form-horizontal col-md-12" {{action "clearMessage" on="click" preventDefault=false}} role="form">
-
+	<!-- <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true"> -->
 		{{partial 'profile-form'}}
 
 		{{partial 'petition-form'}}
@@ -18,7 +18,7 @@
 				</div>
 			</div>
 		</div>
-
+		<!-- </div> end of accordion-->
 	</form><br>
 </div>
 {{outlet}}
