Comment out additional expenses template

--- a/travelsFront/app/templates/petition-form.hbs
+++ b/travelsFront/app/templates/petition-form.hbs
@@ -101,10 +101,10 @@
 				</select>
 			</div>
 
-			<label for="additional_expenses_sum" class="col-sm-2 control-label">Λοιπά Έξοδα</label>
+			<!-- <label for="additional_expenses_sum" class="col-sm-2 control-label">Λοιπά Έξοδα</label>
 			<div class="col-sm-4">	
-   				{{input value=model.additional_expenses_sum type="number" class="form-control"}}	
-			</div>
+   				{{input value=model.additional_expenses_sum type="text" class="form-control"}}	
+			</div> -->
 		</div> 
 
 		<div class="profileForm form-group">
