Use ENV 'backend_host' in every controller

--- a/travelsFront/app/templates/petition.hbs
+++ b/travelsFront/app/templates/petition.hbs
@@ -17,7 +17,27 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div><!-- end of message modal-->
+
+		<div class="modal fade" id="confirmModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+						<h4 class="modal-title" id="myModalLabel">Επιβεβαίωση</h4>
+					</div>
+					<div class="modal-body">
+						Είστε σίγουροι ότι θέλετε να μεταβείτε σε άλλη σελίδα; Σε αυτή την περίπτωση οι αλλαγές σας θα χαθούν.
+						
+					</div>
+
+					<div class="modal-footer">
+						<button type="button" class="btn btn-default" id="stay" data-dismiss="modal">Παραμονή</button>
+						<button type="submit" class="btn btn-primary" id="leave" data-dismiss="modal">Μετάβαση</button>
+					</div>
+				</div>
+			</div>
+		</div> <!--end of confirm Modal-->
 		<!-- </div> end of accordion-->
 	</form><br>
 </div>
