Delete unnecessary comments

--- a/travelsFront/app/templates/edit-petition.hbs
+++ b/travelsFront/app/templates/edit-petition.hbs
@@ -1,5 +1,6 @@
 <div class="container">
-	<form class="form-horizontal col-md-12" {{action "clearMessage" on="click" preventDefault=false}} role="form">
+
+	<form class="form-horizontal col-md-12"  role="form">
 
 		{{partial 'profile-form'}}
 
