Fix action willTransition in petition

--- a/travelsFront/app/templates/petition.hbs
+++ b/travelsFront/app/templates/petition.hbs
@@ -1,5 +1,5 @@
 <div class="container">
-	<form class="form-horizontal col-md-12" role="form">
+	<form class="form-horizontal col-md-12" {{action "checkChanges" preventDefault=false}} role="form">
 	<!-- <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true"> -->
 		{{partial 'profile-form'}}
 
