Fix action willTransition in edit-petition

--- a/travelsFront/app/templates/edit-petition.hbs
+++ b/travelsFront/app/templates/edit-petition.hbs
@@ -1,6 +1,6 @@
 <div class="container">
 
-	<form class="form-horizontal col-md-12"  role="form">
+	<form class="form-horizontal col-md-12" {{action "checkChanges" preventDefault=false}} role="form">
 
 		{{partial 'profile-form'}}
 
