--- a/travelsFront/app/templates/secretary-form.hbs
+++ b/travelsFront/app/templates/secretary-form.hbs
@@ -50,23 +50,23 @@
 			</div>
 		</div> 
 
-		<div class="profileForm form-group">
+<!--  	<div class="profileForm form-group">
 			<label for="depart_date" class="col-sm-2 control-label">Αναχώρηση</label>
 			<div class="col-sm-4">	
-				{{input value=model.depart_date type="datetime-local" class="form-control"  }}
+				{{input value=model.depart_date type="datetime-local" class="form-control" }}
 			</div>
-			<!-- <div class="col-sm-4">
+			<div class="col-sm-4">
 				{{bs-datetimepicker date="" format="DD/MM/YYYY-hh:mm a" }}
-			</div> -->
+			</div>
 
 			<label for="return_date" class="col-sm-2 control-label">Επιστροφή</label>
 			<div class="col-sm-4">	
 				{{input value=model.return_date type="datetime-local" class="form-control" }}
 			</div>
-			<!-- <div class="col-sm-4">
+			<div class="col-sm-4">
 				{{bs-datetimepicker date="" format="DD/MM/YYYY-hh:mm a" }}
-			</div> -->
-		</div>
+			</div>
+		</div>  -->
 
 		<div class="profileForm form-group">
 			<label for="flight_price" class="col-sm-2 control-label">Αεροπορικό Εισιτήριο</label>
