Refactor secretary-form style

--- a/travelsFront/app/templates/secretary-form.hbs
+++ b/travelsFront/app/templates/secretary-form.hbs
@@ -50,35 +50,11 @@
 			</div>
 		</div> 
 
-<!--  	<div class="profileForm form-group">
-			<label for="depart_date" class="col-sm-2 control-label">Αναχώρηση</label>
-			<div class="col-sm-4">	
-				{{input value=model.depart_date type="datetime-local" class="form-control" }}
-			</div>
-			<div class="col-sm-4">
-				{{bs-datetimepicker date="" format="DD/MM/YYYY-hh:mm a" }}
-			</div>
-
-			<label for="return_date" class="col-sm-2 control-label">Επιστροφή</label>
-			<div class="col-sm-4">	
-				{{input value=model.return_date type="datetime-local" class="form-control" }}
-			</div>
-			<div class="col-sm-4">
-				{{bs-datetimepicker date="" format="DD/MM/YYYY-hh:mm a" }}
-			</div>
-		</div>  -->
 
 		<div class="profileForm form-group">
 			<label for="flight_price" class="col-sm-2 control-label">Αεροπορικό Εισιτήριο</label>
 			<div class="col-sm-4">
 				{{input value=model.advanced_info.flight.flightPrice type="number" class="form-control" }}
-			</div>
-		</div>
-
-		<div class="profileForm form-group">
-			<label for="overnight_cost" class="col-sm-2 control-label">Διανυκτέρευση (Ημερήσια)</label>
-			<div class="col-sm-4">
-				{{input value=model.advanced_info.accomondation.hotelPrice type="number" class="form-control" }}
 			</div>
 
 			<label for="feeding" class="col-sm-2 control-label">Κάλυψη Διατροφής</label>
@@ -94,25 +70,23 @@
 		</div>
 
 		<div class="profileForm form-group">
-			<label for="trip_days_before" class="col-sm-2 control-label">Εναπομείνασες Ημέρες Μετακίνησης Εργασιών: Πριν</label>
+			<label for="overnight_cost" class="col-sm-2 control-label">Διανυκτέρευση (Ημερήσια)</label>
 			<div class="col-sm-4">
-				{{input value=model.trip_days_before type="text" class="form-control" }}
+				{{input value=model.advanced_info.accomondation.hotelPrice type="number" class="form-control" }}
 			</div>
 
-			<div class="profileForm form-group">
-			<label for="non_grnet_quota" class="col-sm-2 control-label" style="font-weight:normal;">Ημ. Αποζημίωση από άλλο Φορέα</label>
-			<div class="col-sm-4">
-				{{input value=model.advanced_info.non_grnet_quota type="text" class="form-control" }}
-			</div>
-		</div>
-		</div>
-
-		<div class="profileForm form-group">
 			<label for="flight" class="col-sm-2 control-label" style="font-weight:normal;">Στοιχεία  Μετακίνησης</label>
 			<div class="col-sm-4">
 				{{#character-limit max=100}}
 				{{textarea value=model.advanced_info.flight.flightName type="text" cols="75" class="form-control"}}
 				{{/character-limit}}
+			</div>
+		</div>
+
+		<div class="profileForm form-group">
+			<label for="trip_days_before" class="col-sm-2 control-label">Εναπομείνασες Ημέρες Μετακίνησης Εργασιών: Πριν</label>
+			<div class="col-sm-4">
+				{{input value=model.trip_days_before type="text" class="form-control" }}
 			</div>
 
 			<label for="accomondation" class="col-sm-2 control-label" style="font-weight:normal;">Στοιχεία  Καταλύματος</label>
@@ -121,7 +95,15 @@
 				{{textarea value=model.advanced_info.accomondation.hotel type="textarea" cols="75" class="form-control"}}
 				{{/character-limit}}
 			</div>
-		</div>	
+		</div>
+
+		<div class="profileForm form-group">
+			<label for="non_grnet_quota" class="col-sm-2 col-sm-offset-6 control-label" style="font-weight:normal;">Ημ. Αποζημίωση από άλλο Φορέα</label>
+			<div class="col-sm-4">
+				{{input value=model.advanced_info.non_grnet_quota type="text" class="form-control" }}
+			</div>
+		</div>
+
 	</div>
 	</div>
 </div>
