Add additional_expenses_initial field in model & forms

--- a/travelsFront/app/templates/petition-form.hbs
+++ b/travelsFront/app/templates/petition-form.hbs
@@ -119,10 +119,10 @@
 				</select>
 			</div>
 
-			<!-- <label for="additional_expenses_initial" class="col-sm-2 control-label">Λοιπά Έξοδα</label>
+			<label for="additional_expenses_initial" class="col-sm-2 control-label" style="font-weight:normal;">Λοιπά Έξοδα</label>
 			<div class="col-sm-4">	
-   				{{input value=model.additional_expenses_initial type="text" class="form-control"}}	
-			</div> -->
+   				{{input value=model.additional_expenses_initial type="number" class="form-control"}}	
+			</div>
 		</div> 
 
 		<div class="profileForm form-group">
@@ -133,12 +133,12 @@
 				{{/character-limit}}
 			</div>
 
-			<!-- <label for="additional_expenses_initial_description" class="col-sm-2 control-label" style="font-weight:normal;">Προτεινόμενα Μέσα Μετακίνησης</label>
+			<label for="additional_expenses_initial_description" class="col-sm-2 control-label" style="font-weight:normal;">Περιγραφή Λοιπών Εξόδων</label>
 			<div class="col-sm-4">	
 				{{#character-limit max=100}}
 					{{textarea value=model.additional_expenses_initial_description type="textarea" cols="75" class="form-control"}}
 				{{/character-limit}}
-			</div> -->
+			</div>
 		</div>
 
 		<div class="profileForm form-group">
