Change submit modal message in advanced-petition

--- a/travelsFront/app/templates/advanced-petition.hbs
+++ b/travelsFront/app/templates/advanced-petition.hbs
@@ -45,7 +45,7 @@
 						<h4 class="modal-title" id="myModalLabel">Υποβολή αλλαγών</h4>
 					</div>
 					<div class="modal-body">
-						{{if datesChanged "Οι ημερομηνίες έχουν αλλάξει, ως εκτούτου τα κόστη ταξιδιού((α) Ημέρες Μετακίνησης Εργασιών (β) Διανυκτερεύσεις και (γ) Ημέρες Αποζημίωσης) θα επανα-υπολογιστούν." "Είστε σίγουροι ότι θέλετε να αποθηκεύσετε τις αλλαγές?"
+						{{if datesChanged "Οι ημερομηνίες έχουν αλλάξει, ως εκτούτου τα κόστη ταξιδιού((α) Ημέρες Μετακίνησης Εργασιών (β) Διανυκτερεύσεις και (γ) Ημέρες Αποζημίωσης) θα επανα-υπολογιστούν." "Είστε σίγουροι ότι θέλετε να υποβάλετε την αίτηση σας?"
 						}}
 					</div>
 					<div class="modal-footer">
